# linux-buildroot-example

./: .gitmodules  Makefile  README.md  sw-description
.github/workflows/: build.yml
app/: CMakeLists.txt  Makefile  README.md  app.desktop  main.cpp
buildroot-external/: external.desc  external.mk
buildroot-external/configs/: config_zero2w.txt  genimage.cfg  raspberrypizero2w_custom_defconfig  sw-description  swupdate.config
kernel-modules/hello_world/: .gitignore  Makefile  README.md  hello_world.c
rootfs-overlay/etc/: dropbear  wpa_supplicant.conf
rootfs-overlay/etc/profile.d/: profile.sh
rootfs-overlay/etc/systemd/network/: usb0.network
rootfs-overlay/etc/systemd/system/: app.service  expand-rootfs.service  usb-gadget.service  wpa_supplicant.service
rootfs-overlay/root/.ssh/: authorized_keys  dropbear_ed25519_host_key  raspberrypi.key  raspberrypi.pub
